welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: not found: value c
		if (getCouleurSol() == c) {
                                       ^SlugSnail:21: error: not found: value c
		else { c = false }
                       ^